2006-04-17  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/id3demux/id3tags.c:
	Recognise TCO (Genre) tags in ID3v2.2. Patch by Alex Lancaster
	(Fixes #338713)

2006-04-12  Wim Taymans  <wim@fluendo.com>

	* ext/gdk_pixbuf/gstgdkpixbuf.c: (gst_gdk_pixbuf_sink_setcaps),
	(gst_gdk_pixbuf_get_capslist), (gst_gdk_pixbuf_sink_getcaps),
	(gst_gdk_pixbuf_class_init), (gst_gdk_pixbuf_init),
	(gst_gdk_pixbuf_flush), (gst_gdk_pixbuf_sink_event),
	(gst_gdk_pixbuf_chain):
	Some cleanups.
	Added RGBA as a possible output format.
	Correctly free the supported mimetypes.
	deprecate silent arg, it's not used.
	Return result from _alloc_buffer to peer.

2006-04-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/rtp/gstrtpmp4vdepay.c: (gst_rtp_mp4v_depay_process):
	  Don't leak memory allocated by gst_buffer_new_and_alloc() by
	  overwriting GST_BUFFER_MALLOCDATA.

2006-04-11  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/libpng/gstpngdec.c: (gst_pngdec_init),
	(user_endrow_callback), (user_end_callback),
	(gst_pngdec_caps_create_and_set), (gst_pngdec_chain),
	(gst_pngdec_sink_setcaps), (gst_pngdec_sink_event),
	(gst_pngdec_libpng_clear), (gst_pngdec_change_state):
	* ext/libpng/gstpngdec.h:
	  Handle more than one frame if the content is framed,
	  like with png-in-quicktime (#331917).

2006-04-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* sys/oss/Makefile.am:
	* sys/oss/common.h:
	* sys/oss/gstosssink.c: (gst_oss_sink_init), (gst_oss_sink_open),
	(gst_oss_sink_prepare), (gst_oss_sink_unprepare):
	* sys/oss/gstosssrc.c: (gst_oss_src_prepare),
	(gst_oss_src_unprepare):
	  - the user-visible error strings were in the wrong category
	  - and the messages were not marked for translation
	  - which is actually a good thing, because they were exactly
	    the kind of message you would never want anyone to see
	  - the macros were using variables that didn't exist in the macro
	    arguments